# combinatorics

./: AUTHORS  Makefile.am  Makefile.in  aclocal.m4  configure.ac
include/: combinatorics.h  diophantine.h  perm.h  permgrp.h  permgrp_struct_p.h
src/: config.h.in  diophantine.c  permgrp.c  permgrp_aux_funcs.c  permgrp_new.c
